--- a/style.css
+++ b/style.css
@@ -121,3 +121,16 @@ button:hover {
 #topicContent button {
     margin-top: 20px;
 }
+/* Стили для контейнера текста */
+#topicTextContainer {
+    max-width: 800px;
+    margin: 20px auto; /* Отступ сверху и снизу */
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    line-height: 1.6;
+    text-align: justify;
+    overflow-y: auto; /* Добавляем возможность прокрутки */
+    height: 600px; /* Устанавливаем фиксированную высоту контейнера */
+}
