--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 /* Общие стили для body */
 body {
-    font-family: Arial, sans-serif;
+    font-family: Times, sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center; /* Центрирование по горизонтали */
-    justify-content: flex-start; /* Выравнивание по верхнему краю */
+    justify-content: center; /* Выравнивание по верхнему краю */
     background-color: #f4f4f4;
     overflow-y: auto; /* Разрешаем прокрутку всей страницы */
     min-height: 100vh; /* Минимальная высота страницы */
@@ -196,6 +196,24 @@ button:hover {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+}
+
+/* Стиль для страницы профиля */
+#profileSection {
+    text-align: center;
+    padding: 20px;
+}
+
+#profileNickname {
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: #007bff;
+}
+
+#profileResults {
+    margin-top: 20px;
+    font-size: 18px;
+    line-height: 1.6;
 }
 
 .modal-content button:hover {
